# qeet-logs

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  PHASE1-GAP-REGISTER.md  PHASE2-GAP-REGISTER.md  README.md  SECURITY.md  biome.json  docker-compose.override.yml  docker-compose.yml  go.mod  go.sum  package.json
.github/workflows/: ci.yml  release.yml  security.yml
api/openapi/: README.md  admin.yaml  ingest.yaml  openapi.yaml  operations.yaml  query.yaml
api/postman/: qeet-logs.postman_collection.json  qeet-logs.postman_environment.json  run.sh
apps/console/: .cta.json  .env.example  .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
clickhouse/config/: storage.xml
clickhouse/migrations/: 0001_logs.sql  0002_auth_events.sql  0003_logs_dedup.sql  0004_metrics.sql  0005_traces.sql  0006_enrichment.sql  0007_change_events.sql  0008_metric_rollups.sql  0009_cold_tier.sql
cmd/alerter/: main.go
cmd/lifecycle/: main.go
cmd/mcp/: client.go  jsonrpc.go  jsonrpc_test.go  main.go  server.go  server_test.go  tools.go  tools_test.go
cmd/migrate/: main.go
cmd/ql/: main.go
cmd/query/: main.go
cmd/seed/: main.go
deploy/: Caddyfile  SOC2-CONTROLS.md  docker-compose.prod.yml
deploy/docker/: Dockerfile.alerter  Dockerfile.ingest  Dockerfile.lifecycle  Dockerfile.mcp  Dockerfile.query
deploy/grafana/: README.md  prometheus-scrape.example.yml
deploy/otel-collector/: README.md  builder-config.yaml  config.yaml
deploy/prod/: README.md  secrets.example.yaml  values-prod.yaml
deploy/runbooks/: backup-restore.md  disaster-recovery.md  incident-response.md  migration-rollback.md  on-call.md  scaling.md
docs/: data-privacy.md  deployment-guide.md  ga-release-checklist.md  observability.md  slo-sli.md  staging-bringup.md
domains/aigateway/: aigateway.go  aigateway_test.go  thread.go  thread_test.go
domains/alerting/: baseline.go  calibration.go  calibration_test.go  confidence.go  confidence_test.go  delivery.go  engine.go  evaluator.go  incident.go  rule.go
domains/anomaly/: anomaly.go  anomaly_test.go
domains/billing/: billing.go  billing_test.go
domains/buscontext/: buscontext.go  buscontext_test.go
domains/changesource/: changesource.go  changesource_test.go
domains/chatops/: chatops.go  chatops_test.go  commands.go  commands_test.go
domains/deploy/: deploy.go  deploy_test.go
domains/forecast/: forecast.go  forecast_test.go
domains/grafana/: loki.go  loki_test.go
domains/lifecycle/: lifecycle.go  lifecycle_test.go
domains/notify/: notify.go  notify_test.go
domains/postmortem/: postmortem.go  postmortem_test.go
domains/query/: ast.go  compile.go  (+6 more)
ingest/: Cargo.toml
ingest/core/: Cargo.toml
ingest/core/src/: lib.rs  metric.rs  normalize.rs  pii.rs  record.rs  remap.rs  span.rs
ingest/gateway/: Cargo.toml
ingest/gateway/src/: harden.rs  legacy.rs  main.rs  otlp.rs  otlp_proto.rs  prom.rs  telemetry.rs
ingest/writer/: Cargo.toml
ingest/writer/src/: main.rs
migrations/: 0001_create_tenants.up.sql  0002_create_api_keys.up.sql  0003_create_metadata_tables.down.sql  0003_create_metadata_tables.up.sql  0004_enable_rls.down.sql  0004_enable_rls.up.sql  0005_alerter.down.sql  0005_alerter.up.sql  0006_dlq.down.sql  0006_dlq.up.sql  0007_transforms.down.sql  0007_transforms.up.sql  0008_incidents.up.sql  0009_dashboard_share.down.sql  0009_dashboard_share.up.sql  0010_webhook_endpoints.down.sql  0010_webhook_endpoints.up.sql  0011_business_context.down.sql  0011_business_context.up.sql  0012_postmortems.down.sql  0012_postmortems.up.sql  0013_incident_feedback.down.sql  0013_incident_feedback.up.sql  0014_incident_sessions.down.sql  0014_incident_sessions.up.sql  0015_rca_feedback.down.sql  0015_rca_feedback.up.sql  0016_ai_gateway.down.sql  0016_ai_gateway.up.sql  0017_tenant_plans.down.sql  0017_tenant_plans.up.sql  0018_chatops_installations.down.sql  0018_chatops_installations.up.sql  0019_copilot_conversations.down.sql  0019_copilot_conversations.up.sql  0020_tenant_tiers.down.sql  0020_tenant_tiers.up.sql  0021_notify_prefs.down.sql  0021_notify_prefs.up.sql
sdk/python/: pyproject.toml
sdk/python/qeetlogs/: __init__.py
test/: README.md
(+183 files in other folders)
