# qeet-logs ingest pipeline (Rust). Per the TAD, the hot ingest path is Rust:
#   - gateway: HTTP/OTLP receiver -> PII gate -> NATS publish
#   - writer:  NATS consumer -> ClickHouse batch insert + Redis tail fan-out
#   - core:    shared LogRecord type, PII detectors, ULID, normalisation
[workspace]
resolver = "2"
members = ["core", "gateway", "writer"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-nats = "0.38"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
once_cell = "1"
sha2 = "0.10"
hex = "0.4"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
