[package]
name = "qeet-logs-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "qeet-logs-gateway"
path = "src/main.rs"

[dependencies]
qeet-logs-core = { path = "../core" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
redis = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
