[project]
name = "qeetlogs"
version = "0.1.0"
description = "Official Python SDK for Qeet Logs"
requires-python = ">=3.9"
license = { text = "UNLICENSED" }
# Zero third-party dependencies — uses only the standard library.

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["qeetlogs*"]
